# itmo-cpp-programming

./: CMakeLists.txt  README.md
practice-1/1/: 1.cpp  1_1.cpp
practice-10/: 10_1.cpp
practice-11/: 11_1.cpp  11_2.cpp
practice-13/: 13_1.cpp
practice-14/: 14_1.cpp  14_2.cpp
practice-15/: GradeSystem.cpp  GradeSystem.h  Group.cpp  Group.h  IdCard.cpp  IdCard.h  Student.cpp  Student.h  main.cpp
practice-2/1/: 2_1.cpp
practice-2/2/: 2_2.cpp
practice-2/3/: 2_3.cpp
practice-2/4/: 2_4.cpp
practice-3/1/: 3_1.cpp
practice-3/2/: 3_2.cpp
practice-3/3/: 3_3.cpp
practice-3/4/: 3_4.cpp
practice-3/5/: 3_5.cpp
practice-4/1/: 4_1.cpp
practice-4/2/: 4_2.cpp
practice-5/1/: 5_1.cpp
practice-5/2/: 5_2.cpp
practice-5/3/: 5_3.cpp
practice-5/4/: 5_4.cpp
practice-6/: 6_1.cpp  6_2.cpp
practice-7/: 7_1.cpp  7_2.cpp  7_3.cpp
practice-8/: 8_1.cpp
practice-9/: 9_1.cpp  9_2.cpp
