cmake_minimum_required(VERSION 3.26)
project(itmo_programming)

set(CMAKE_CXX_STANDARD 17)

add_executable(itmo_programming
        practice-1/1/1_1.cpp
        practice-2/1/2_1.cpp
        practice-2/2/2_2.cpp
        practice-2/3/2_3.cpp
        practice-2/4/2_4.cpp
        practice-3/1/3_1.cpp
        practice-3/2/3_2.cpp
        practice-3/3/3_3.cpp
        practice-3/4/3_4.cpp
        practice-3/5/3_5.cpp
        practice-4/1/4_1.cpp
        practice-4/2/4_2.cpp
        practice-5/1/5_1.cpp
        practice-5/2/5_2.cpp
        practice-5/3/5_3.cpp
        practice-5/4/5_4.cpp
        practice-6/6_1.cpp
        practice-6/6_2.cpp
        practice-7/7_1.cpp
        practice-7/7_2.cpp
        practice-7/7_3.cpp
        practice-8/8_1.cpp
        practice-9/9_1.cpp
        practice-9/9_2.cpp
        practice-10/10_1.cpp
        practice-11/11_1.cpp
        practice-11/11_2.cpp
        practice-13/13_1.cpp
        practice-14/14_1.cpp
        practice-14/14_2.cpp
        practice-15/Student.h
        practice-15/main.cpp
        practice-15/IdCard.cpp
        practice-15/Group.cpp
        practice-15/GradeSystem.cpp
        practice-15/Student.cpp
)
